# openai-realtime-streamlit

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  utils.py
.streamlit/: config.toml
openai_realtime_streamlit/: app.py  constants.py  utils.py
